--- a/Semana 3/css/reset.css
+++ b/Semana 3/css/reset.css
@@ -7,6 +7,7 @@ Dev: Luiz Filipe - 2111287
 
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+/* style para recomeçar o jogo */
 * {
   margin: 0;
   padding: 0;
