--- a/Semana 1/Arquivo 2/style.css
+++ b/Semana 1/Arquivo 2/style.css
@@ -1,3 +1,10 @@
+/*
+Curso de Engenharia de Software - UniEVANGÉLICA</h1>
+Disciplina de Programação Web
+DATA: 01/03/2023
+Dev: Luiz Filipe - 2111287
+*/
+
 body{
     background-size: cover;
     background-attachment: fixed;
