--- a/Semana 1/Arquivo 4/style.css
+++ b/Semana 1/Arquivo 4/style.css
@@ -1,3 +1,10 @@
+/*
+Curso de Engenharia de Software - UniEVANGÉLICA</h1>
+Disciplina de Programação Web
+DATA: 01/03/2023
+Dev: Luiz Filipe - 2111287
+*/
+
 *{
     padding: 0;
     margin: 0;
