--- a/Semana 5/Atividade Pratica/stylee.css
+++ b/Semana 5/Atividade Pratica/stylee.css
@@ -16,6 +16,7 @@ Dev: Luiz Filipe - 2111287
     position: relative;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: -2em;
 
 }
 .tabela table{
@@ -23,7 +24,7 @@ Dev: Luiz Filipe - 2111287
     text-align: center;
 }
 .colunaA{
-    
+    text-align: center;  
     border: 1;
     width: 100%;
     height:20vw;
@@ -67,8 +68,8 @@ table{
 }
 .formulario form{
     text-align: center;
-    margin-top: 15em;
-    color: orangered;
+    margin-top: 10em;
+    color: rgb(168, 175, 174);
 
 }
 body{
@@ -76,4 +77,7 @@ body{
     background-attachment: fixed;
     width: 100%;
     margin-top: -5em;
+}
+.titletable{
+    text-align: center;
 }
